--- a/docs/docs/05-migrations/13-v8-to-v9.md
+++ b/docs/docs/05-migrations/13-v8-to-v9.md
@@ -24,7 +24,6 @@ There are four sections based on the four potential user groups of this document
         - [24-host](#24-host)
     - [IBC Apps](#ibc-apps)
         - [ICS20 - Transfer](#ics20---transfer)
-            - [ICS20 v2](#ics20-v2)
             - [`DenomTrace` type refactoring](#denomtrace-type-refactoring)
         - [ICS27 - Interchain Accounts](#ics27---interchain-accounts)
         - [Callbacks](#callbacks)
@@ -161,7 +160,7 @@ func (k *Keeper) TimeoutOnClose(
 ) 
 ```
 
-- The keeper handlers `RecvPacket`, `AcknowledgePacket`, `TimeoutPacket` and `TimeoutOnClose` now return the channel version, which the message server passes to the packet lifecycle application callbacks (`OnRecvPacket`, `OnAcknowledgementPacket` and `OnTimeoutPacket`). The channel version is useful when adding backwards compatible features to an existing application implementation (for example: in the context of ICS20 v2, middleware and the transfer application may use the channel version to unmarshal the packet differently depending on the channel version).
+- The keeper handlers `RecvPacket`, `AcknowledgePacket`, `TimeoutPacket` and `TimeoutOnClose` now return the channel version, which the message server passes to the packet lifecycle application callbacks (`OnRecvPacket`, `OnAcknowledgementPacket` and `OnTimeoutPacket`). The channel version is useful when adding backwards compatible features to an existing application implementation (for example: in the context of a future ICS20 v2, middleware and the transfer application may use the channel version to unmarshal the packet differently depending on the channel version).
 
 ```diff
 func (k *Keeper) RecvPacket(
@@ -319,7 +318,7 @@ func NewIBCMiddleware(
 
 ### Callbacks
 
-The `ContractKeeper` interface has been extended with the base application version. The base application version will be required by contracts to unmarshal the packet data. An example of this is unmarshaling ICS20 v2 packets which requires knowing the base version of a transfer stack (either v1 or v2). 
+The `ContractKeeper` interface has been extended with the base application version. The base application version will be required by contracts to unmarshal the packet data.
 
 ```diff
 type ContractKeeper interface {
