chore: remove remnants of ics20-2 (#8016)
* chore: remove remnants of ics20-2

* rename FungibleTokenPacketDataV2 to make it clear that its an internal type

* fix broken link

(cherry picked from commit 40f324098a562fe03c3658575928f4af8c896b83)

--- a/docs/docs/05-migrations/13-v8-to-v9.md
+++ b/docs/docs/05-migrations/13-v8-to-v9.md
@@ -24,7 +24,6 @@ There are four sections based on the four potential user groups of this document
         - [24-host](#24-host)
     - [IBC Apps](#ibc-apps)
         - [ICS20 - Transfer](#ics20---transfer)
-            - [ICS20 v2](#ics20-v2)
             - [`DenomTrace` type refactoring](#denomtrace-type-refactoring)
         - [ICS27 - Interchain Accounts](#ics27---interchain-accounts)
         - [Callbacks](#callbacks)
@@ -161,7 +160,7 @@ func (k *Keeper) TimeoutOnClose(
 ) 
 ```
 
-- The keeper handlers `RecvPacket`, `AcknowledgePacket`, `TimeoutPacket` and `TimeoutOnClose` now return the channel version, which the message server passes to the packet lifecycle application callbacks (`OnRecvPacket`, `OnAcknowledgementPacket` and `OnTimeoutPacket`). The channel version is useful when adding backwards compatible features to an existing application implementation (for example: in the context of ICS20 v2, middleware and the transfer application may use the channel version to unmarshal the packet differently depending on the channel version).
+- The keeper handlers `RecvPacket`, `AcknowledgePacket`, `TimeoutPacket` and `TimeoutOnClose` now return the channel version, which the message server passes to the packet lifecycle application callbacks (`OnRecvPacket`, `OnAcknowledgementPacket` and `OnTimeoutPacket`). The channel version is useful when adding backwards compatible features to an existing application implementation (for example: in the context of a future ICS20 v2, middleware and the transfer application may use the channel version to unmarshal the packet differently depending on the channel version).
 
 ```diff
 func (k *Keeper) RecvPacket(
@@ -258,32 +257,6 @@ All functions ending with `Path` naming have been removed in favour of their sib
 
 ### ICS20 - Transfer
 
-#### ICS20 v2
-
-- With support for multidenom transfer packets and path forwarding, the `NewMsgTransfer` constructor function to create a new `MsgTransfer` instance now accepts multiple coins instead of just one, and an argument with forwarding information:
-
-```diff
-func NewMsgTransfer(
-  sourcePort, sourceChannel string,
-- token sdk.Coin, 
-+ tokens sdk.Coins,
-  sender, receiver string,
-  timeoutHeight clienttypes.Height, timeoutTimestamp uint64,
-  memo string,
-+ forwarding *Forwarding,
-)
-```
-
-- The `ibc_transfer` and `fungible_token_packet` events do not include the attributes `denom` and `amount` anymore; instead they include the attribute `tokens` with the list of coins transferred in the packet.
-- A new type for the packet payload has been introduced: [`FungibleTokenPacketDataV2`](https://github.com/cosmos/ibc-go/blob/release/v9.0.x/proto/ibc/applications/transfer/v2/packet.proto#L27-L41). Transfer channels with version `ics20-2` will use this new type for the payload and it will be encoded using Protobuf (instead of JSON). Middleware that wraps the transfer application and unmarshals the packet data MUST take this into account when upgrading: depending on the channel version, packet data should unmarshal either as JSON (v1) or Protobuf (v2). The helper function [`UnmarshalPacketData`](https://github.com/cosmos/ibc-go/blob/release/v9.0.x/modules/apps/transfer/types/packet.go#L212) encapsulates this logic and can be used by middleware or other applications to correctly unmarshal the packet data:
-
-```go
-packetData, err := transfertypes.UnmarshalPacketData(packet.Data, version)
-if err != nil {
-  return err
-}
-```
-
 #### `DenomTrace` type refactoring
 
 - The [`DenomTrace`](https://github.com/cosmos/ibc-go/blob/v8.0.0/modules/apps/transfer/types/transfer.pb.go#L25-L33) type has been made private and will be completely removed in a later release. Please use the [`Denom` type](https://github.com/cosmos/ibc-go/blob/release/v9.0.x/modules/apps/transfer/types/token.pb.go#L81-L87) instead.
@@ -345,7 +318,7 @@ func NewIBCMiddleware(
 
 ### Callbacks
 
-The `ContractKeeper` interface has been extended with the base application version. The base application version will be required by contracts to unmarshal the packet data. An example of this is unmarshaling ICS20 v2 packets which requires knowing the base version of a transfer stack (either v1 or v2). 
+The `ContractKeeper` interface has been extended with the base application version. The base application version will be required by contracts to unmarshal the packet data.
 
 ```diff
 type ContractKeeper interface {
