--- a/docs/docs/05-migrations/15-v8_1-to-v10.md
+++ b/docs/docs/05-migrations/15-v8_1-to-v10.md
@@ -11,7 +11,7 @@ This guide provides instructions for migrating to a new version of ibc-go.
 
 **Note:** ibc-go supports golang semantic versioning and therefore all imports must be updated on major version releases. In addition, for this release, the 08-wasm module has been released as v10, and the callbacks middleware has been moved into the ibc-go module itself.
 
-Diff examples follows after the list of overall changes:
+Diff examples are shown after the list of overall changes:
 
 - To add support for IBC v2, Chains will need to wire up a new IBC v2 Transfer stack
 - Chains will need to wire up the new light client modules
@@ -23,6 +23,7 @@ Diff examples follows after the list of overall changes:
 - Chains will need, if using this module, to update their imports and usage of `github.com/cosmos/ibc-go/modules/apps/callbacks` to `github.com/cosmos/ibc-go/v10/modules/apps/callbacks`
 
 To add IBC v2 support, wire up a new transfer stack. Example below showing wired up with IBC Callbacks module:
+
 ```diff
 + var ibcv2TransferStack ibcapi.IBCModule
 + ibcv2TransferStack = transferv2.NewIBCModule(app.TransferKeeper)
@@ -36,6 +37,7 @@ To add IBC v2 support, wire up a new transfer stack. Example below showing wired
 ```
 
 Wire up each light client as a separate module and add them to the client keeper router. Example below for 07-tendermint and 08-wasm:
+
 ```diff
 + // Light client modules
 + clientKeeper := app.IBCKeeper.ClientKeeper
@@ -49,6 +51,7 @@ Wire up each light client as a separate module and add them to the client keeper
 ```
 
 Remove ibc fee module name (if used) from module account permissions:
+
 ```diff
   // app.go
   ...
@@ -61,6 +64,7 @@ Remove ibc fee module name (if used) from module account permissions:
 ```
 
 Remove `CapabilityKeeper`, `IBCFeeKeeper` and all `capabilitykeeper.ScopedKeeper` Scoped keepers from the App struct:
+
 ```diff
   // ChainApp extended ABCI application
   type ChainApp struct {
@@ -85,6 +89,7 @@ Remove `CapabilityKeeper`, `IBCFeeKeeper` and all `capabilitykeeper.ScopedKeeper
 ```
 
 Remove capability and ibc fee middleware store keys from the `NewKVStoreKeys` call:
+
 ```diff
 ...
   keys := storetypes.NewKVStoreKeys(
@@ -96,6 +101,7 @@ Remove capability and ibc fee middleware store keys from the `NewKVStoreKeys` ca
 ```
 
 Remove the in-memory store keys previously used by the capability module:
+
 ```diff
 - memKeys := storetypes.NewMemoryStoreKeys(capabilitytypes.MemStoreKey)
 ...
@@ -103,6 +109,7 @@ Remove the in-memory store keys previously used by the capability module:
 ```
 
 Remove creation of the capability keeper:
+
 ```diff
 - // add capability keeper and ScopeToModule for ibc module
 - 	app.CapabilityKeeper = capabilitykeeper.NewKeeper(
@@ -120,6 +127,7 @@ Remove creation of the capability keeper:
 ```
 
 Remove the legacy route for the client keeper:
+
 ```diff
 ...
   govRouter.AddRoute(govtypes.RouterKey, govv1beta1.ProposalHandler).
@@ -129,6 +137,7 @@ Remove the legacy route for the client keeper:
 ```
 
 Update Core IBC Keeper constructor:
+
 ```diff
   app.IBCKeeper = ibckeeper.NewKeeper(
 	appCodec,
@@ -143,6 +152,7 @@ Update Core IBC Keeper constructor:
 ```
 
 Update IBC Transfer keeper constructor:
+
 ```diff
   app.TransferKeeper = ibctransferkeeper.NewKeeper(
 	appCodec,
@@ -161,6 +171,7 @@ Update IBC Transfer keeper constructor:
 ```
 
 Update ICA Host keeper constructor, notice the removal of the `WithQueryRouter` call in particular:
+
 ```diff
   app.ICAHostKeeper = icahostkeeper.NewKeeper(
 	appCodec,
@@ -181,6 +192,7 @@ Update ICA Host keeper constructor, notice the removal of the `WithQueryRouter` 
 ```
 
 Remove IBC Fee Module keeper:
+
 ```diff
 - app.IBCFeeKeeper = ibcfeekeeper.NewKeeper(
 -	appCodec, keys[ibcfeetypes.StoreKey],
@@ -191,6 +203,7 @@ Remove IBC Fee Module keeper:
 ```
 
 Update Transfer stack to remove the fee middleware. The example below shows the correct way to wire up a middleware stack with the IBC callbacks middleware:
+
 ```diff
   // Create Transfer Stack
   var transferStack porttypes.IBCModule
@@ -213,6 +226,7 @@ transferStack = packetforward.NewIBCMiddleware(
 ```
 
 Remove ibc fee middleware and any empty IBCModule (often dubbed `noAuthzModule`) from the ICA Controller stack creation:
+
 ```diff
 - var noAuthzModule porttypes.IBCModule
 - icaControllerStack = icacontroller.NewIBCMiddleware(noAuthzModule, app.ICAControllerKeeper)
@@ -221,12 +235,14 @@ Remove ibc fee middleware and any empty IBCModule (often dubbed `noAuthzModule`)
 ```
 
 Remove ibc fee middleware from ICA Host stack creation:
+
 ```diff
   icaHostStack = icahost.NewIBCModule(app.ICAHostKeeper)
 - icaHostStack = ibcfee.NewIBCMiddleware(icaHostStack, app.IBCFeeKeeper)
 ```
 
 Update the module manager creation by removing the capability module, fee module and updating the tendermint app module constructor:
+
 ```diff
   app.ModuleManager = module.NewManager(
     ...
@@ -241,6 +257,7 @@ Update the module manager creation by removing the capability module, fee module
 ```
 
 Remove the capability module and ibc fee middleware from `SetOrderBeginBlockers`, `SetOrderEndBlockers`, `SetOrderInitGenesis` and `SetOrderExportGenesis`:
+
 ```diff
 -   capabilitytypes.ModuleName,
 -   ibcfeetypes.ModuleName,
@@ -262,6 +279,7 @@ If you use 08-wasm, you will need to update the go module that is used for `Quer
 ```
 
 If you use 08-wasm, you will need to use the wasm client keeper rather than the go module to initialize pinned codes:
+
 ```diff
 - if err := ibcwasmkeeper.InitializePinnedCodes(ctx); err != nil {
 -	panic(fmt.Sprintf("ibcwasmkeeper failed initialize pinned codes %s", err))
@@ -269,4 +287,3 @@ If you use 08-wasm, you will need to use the wasm client keeper rather than the 
 +	panic(fmt.Sprintf("WasmClientKeeper failed initialize pinned codes %s", err))
 + }
 ```
-
