imp: added migration guide

--- a/docs/docs/05-migrations/14-v10-to-v11.md
+++ b/docs/docs/05-migrations/14-v10-to-v11.md
@@ -24,3 +24,41 @@ Diff examples are shown after the list of overall changes:
     authtypes.NewModuleAddress(govtypes.ModuleName).String(),
   )
 ```
+
+The transfer module, the packet forward middleware, and the rate limiting middleware support custom address codecs. This feature is primarily added to support Cosmos EVM for IBC transfers. In a standard Cosmos SDK app, they are wired as follows:
+
+```diff
+  app.TransferKeeper = ibctransferkeeper.NewKeeper(
+    appCodec,
++    app.AccountKeeper.AddressCodec(),
+    runtime.NewKVStoreService(keys[ibctransfertypes.StoreKey]),
+    app.IBCKeeper.ChannelKeeper,
+    app.MsgServiceRouter(),
+    app.AccountKeeper, app.BankKeeper,
+    authtypes.NewModuleAddress(govtypes.ModuleName).String(),
+  )
+```
+
+```diff
+  app.RateLimitKeeper = ratelimitkeeper.NewKeeper(
+    appCodec,
++    app.AccountKeeper.AddressCodec(),
+    runtime.NewKVStoreService(keys[ratelimittypes.StoreKey]),
+    app.IBCKeeper.ChannelKeeper,
+    app.IBCKeeper.ClientKeeper,
+    app.BankKeeper,
+    authtypes.NewModuleAddress(govtypes.ModuleName).String()
+  )
+```
+
+```diff
+  app.PFMKeeper = packetforwardkeeper.NewKeeper(
+    appCodec,
++    app.AccountKeeper.AddressCodec(),
+    runtime.NewKVStoreService(keys[packetforwardtypes.StoreKey]),
+    app.TransferKeeper,
+    app.IBCKeeper.ChannelKeeper,
+    app.BankKeeper,
+    authtypes.NewModuleAddress(govtypes.ModuleName).String()
+  )
+```
