--- a/docs/versioned_docs/version-v6.3.x/04-migrations/03-v1-to-v2.md
+++ b/docs/versioned_docs/version-v6.3.x/04-migrations/03-v1-to-v2.md
@@ -33,7 +33,7 @@ A new function has been added to the app module interface:
 ```go
 // NegotiateAppVersion performs application version negotiation given the provided channel ordering, connectionID, portID, counterparty and proposed version.
     // An error is returned if version negotiation cannot be performed. For example, an application module implementing this interface
-    // may decide to return an error in the event of the proposed version being incompatible with it's own
+    // may decide to return an error in the event of the proposed version being incompatible with its own
     NegotiateAppVersion(
         ctx sdk.Context,
         order channeltypes.Order,
